Fixed 1.16 support with recompiling to java 8