@@ -5,6 +5,7 @@ import eu.okaeri.configs.annotation.Comment;
 import lombok.Getter;
 import lombok.Setter;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Getter
@@ -18,7 +19,7 @@ public class LangConfig extends OkaeriConfig {
     private String invalidArgument = "&e[&6InventoryDropChance&e] &cInvalid argument! Use /idc help for help!";
     private String scrollGiven = "&e[&6InventoryDropChance&e] &aScroll given!";
 
-    private List<String> help = List.of(
+    private List<String> help = Arrays.asList(
             "&e[&6InventoryDropChance&e] &aCommands:",
             "&a/idc reload - Reloads the config",
             "&a/mnd &7- &eMake the item in your hand not drop on death",
@@ -28,13 +29,13 @@ public class LangConfig extends OkaeriConfig {
 
     @Comment()
     @Comment("Appends to the item lore when the item has a 100% chance to not drop on death")
-    private List<String> noDropLore = List.of("&6This item will not drop on death!");
+    private List<String> noDropLore = Arrays.asList("&6This item will not drop on death!");
 
     @Comment()
     @Comment("Appends to the item lore when the item has a specific chance to not drop on death")
-    private List<String> noDropChanceLore = List.of("&6This item has a %chance%% chance to not drop on death!");
+    private List<String> noDropChanceLore = Arrays.asList("&6This item has a %chance%% chance to not drop on death!");
 
-    private List<String> scrollsLore = List.of(
+    private List<String> scrollsLore = Arrays.asList(
             "&6This item is a scroll!",
             "It put a %chance% chance to not drop the item on death!"
     );
